Fix tasks #6637: fix z-index issue on IE9/Chrome for dropdown menu

--- a/plugins/tracker/www/themes/default/css/style.less
+++ b/plugins/tracker/www/themes/default/css/style.less
@@ -1925,6 +1925,8 @@ tr.artifact-children-table-head {
 #tracker_report_renderers {
     margin-top: 24px;
     margin: 24px 12px 0 12px;
+    position: relative;
+    z-index: 1;
 
     & > li:first-child {
         margin-left: 4px;
